trunk/Archive2/ef/74109e3374c8c6/output
main.cpp: In lambda function:
main.cpp:8:23: error: 'i' is not captured
     [] { std::cout << i; }();
                       ^
